@@ -1,4 +1,5 @@
 ver 0.15.13 (2010/??/??)
+* output_thread: fix race condition after CANCEL command
 
 
 ver 0.15.12 (2010/07/20)
